2009-10-21  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: handle SIGWINCH signal
	* spvw_sigwinch.d (update_linelength): update SYS::*PRIN-LINELENGTH*
	global value
	* spvw.d (main): set SYS::*PRIN-LINELENGTH* in MT builds
	(signal_handler_thread): handle SIGWINCH

2009-10-21  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_fault.d (LOCK_PAGE_CACHE, UNLOCK_PAGE_CACHE): acquire/release
	spinlock guarding physical page cache
	(handle_fault, handle_fault_range): use them

2009-10-20  Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d (jmpl_value) [MULTITHREAD]: make it per thread and export
	to modules
	* spvw.d: do not define jmpl_value in MT builds

2009-10-19  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-script): fix the non-UNICODE build
	Reported by Angel Popov <angelpopov@yahoo.com>

2009-10-16  Sam Steingold  <sds@gnu.org>

	* configure.in (AC_INIT): use m4_esyscmd instead of esyscmd

2009-10-15  Sam Steingold  <sds@gnu.org>

	* built.d (built_flags) [DYNAMIC_FFI]: add libffcall version based
	on LIBFFCALL_VERSION

2009-10-15  Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d [MULTITHREAD]: allow USE_CUSTOM_TLS=2 on 64bit builds.
	gcc on osx 10.6+ still does not support __thread qualifier

2009-10-14  Sam Steingold  <sds@gnu.org>

	* stream.d (handle_direction_compatible): NtQueryInformationFile
	is for FILE_TYPE_DISK only, for FILE_TYPE_CHAR, FILE_TYPE_PIPE,
	FILE_TYPE_REMOTE assume compatibility

2009-10-12  Sam Steingold  <sds@gnu.org>

	* stream.d (handle_pathname): extract from handle_to_stream and
	implement for WIN32_NATIVE
	(handle_to_stream): use it

2009-10-12  Sam Steingold  <sds@gnu.org>

	* stream.d (handle_direction_compatible): implement for
	WIN32_NATIVE using NtQueryInformationFile (fixes check-script)

2009-10-09  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: simplify alternative TLS on 32 bit builds
	* lispbibl.d (struct thread_specific_data): use spinlock instead of
	mutex and export it